[package]
name = "dbus-macros"
version = "0.1.0"
authors = ["Roland Fredenhagen"]

description = "Macros for dbus."
repository = "https://github.com/diwic/dbus-rs"
documentation = "https://docs.rs/dbus"
keywords = ["D-Bus", "DBus", "IPC", "derive"]
license = "Apache-2.0/MIT"
categories = ["development-tools::procedural-macro-helpers"]
readme = "../README.md"

edition = "2021"

[lib]
proc-macro = true

[dependencies]
attribute-derive = "0.10.3"
# attribute-derive.git = "https://github.com/ModProg/attribute-derive"
manyhow = "0.11"
proc-macro2 = "1"
quote-use = "0.8"
syn = "2"
